--- a/URY.BAPS.Client.Wpf/App.xaml
+++ b/URY.BAPS.Client.Wpf/App.xaml
@@ -1,13 +1,19 @@
-<Application x:Class="URY.BAPS.Client.Wpf.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Startup="Application_Startup"
-             Exit="Application_Exit" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d"
+<Application xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:viewModel="clr-namespace:URY.BAPS.Client.Wpf.ViewModel">
+             xmlns:viewModel="clr-namespace:URY.BAPS.Client.Wpf.ViewModel"
+             xmlns:Converters="clr-namespace:URY.BAPS.Client.Wpf.Converters"
+             xmlns:fa="http://schemas.fontawesome.io/icons/"
+             x:Class="URY.BAPS.Client.Wpf.App"
+             Startup="Application_Startup"
+             Exit="Application_Exit" mc:Ignorable="d">
     <Application.Resources>
         <ResourceDictionary>
             <BitmapImage x:Key="Logo" UriSource="pack://application:,,,/Resources/splashIcon.png" />
 
             <viewModel:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
+            <Converters:EntryTypeToIconConverter x:Key="EntryTypeToIconConverter" />
 
             <!-- Colours used throughout BAPS -->
             <SolidColorBrush x:Key="MainBg" Color="#FF002D5A" />
@@ -15,6 +21,42 @@
 
             <SolidColorBrush x:Key="AccentBg" Color="#FF004081" />
             <SolidColorBrush x:Key="AccentFg" Color="White" />
+
+            <SolidColorBrush x:Key="SideBg" Color="#FFE1E1E1" />
+
+            <!-- Template used for tracks in track lists and audio walls. -->
+            <DataTemplate x:Key="TrackTemplate" DataType="{x:Type viewModel:TrackViewModel}">
+                <Border BorderThickness="2px" CornerRadius="4" Background="{StaticResource SideBg}">
+                    <Border.Style>
+                        <Style TargetType="{x:Type Border}">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding IsLoaded}" Value="True">
+                                    <Setter Property="BorderBrush" Value="{StaticResource AccentBg}" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Border.Style>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="24px" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <fa:ImageAwesome Grid.Row="0" Grid.Column="0"
+                                         Foreground="Black"
+                                         Margin="2px"
+                                         Icon="{Binding Converter={StaticResource EntryTypeToIconConverter}}" />
+                        <TextBlock
+                            Grid.Row="0" Grid.Column="1"
+                            VerticalAlignment="Center"
+                            Margin="2px"
+                            FontSize="10pt"
+                            TextWrapping="NoWrap"
+                            TextTrimming="WordEllipsis"
+                            ToolTip="{Binding Description}"
+                            Text="{Binding Description}" />
+                    </Grid>
+                </Border>
+            </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
